Added padding to lakehavasuview.jpg and lakehavasuhobby.jpg
Added padding to ensure it didn't look like cut off photos.

--- a/carousel.css
+++ b/carousel.css
@@ -203,3 +203,12 @@ h3 {
    margin-left: 20px;
     margin-right: 20px; 
 }
+
+.img2 {
+    padding-left: 10px;
+}
+
+.img3 {
+    padding-right: 10px;
+}
+
