--- a/carousel.css
+++ b/carousel.css
@@ -166,6 +166,8 @@ img {max-width:100%}
 
     font-weight: bold;
     font-size: 18px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 h4, h5 {
