Changed font to class "consult" to bold

--- a/carousel.css
+++ b/carousel.css
@@ -177,6 +177,7 @@ h4, h5 {
 
 .consult {
     text-align: center;
+    font-weight: bold;
     font-size: 32px;
     color: #140046;
     margin-left: 20px;
