--- a/carousel.css
+++ b/carousel.css
@@ -178,10 +178,10 @@ h4, h5 {
 .consult {
     text-align: center;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 20px;
     color: #140046;
-    margin-left: 20px;
-    margin-right: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .offers {
