--- a/carousel.css
+++ b/carousel.css
@@ -178,8 +178,17 @@ h4, h5 {
 .consult {
     text-align: center;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 24px;
     color: #140046;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.businessnumber {
+    text-align:center;
+    font-weight:bold;
+    font-size: 28px;
+    color: #8B0000;
     padding-left: 20px;
     padding-right: 20px;
 }
