--- a/carousel.css
+++ b/carousel.css
@@ -184,11 +184,11 @@ h4, h5 {
     padding-right: 20px;
 }
 
-#businessnumber {
+.businessnumber {
     text-align:center;
     font-weight:bold;
     max-width: 100%;
-    font-size: 18px;
+    font-size: 26px;
     color: #8B0000;
     padding-left: 20px;
     padding-right: 20px;
