--- a/carousel.css
+++ b/carousel.css
@@ -88,6 +88,7 @@ body {
 }
 
 h1 {
+    font-size: 250%
     text-align: center;
     color: #8B0000;
     font-weight: bold;
@@ -97,6 +98,10 @@ h2 {
     text-align: center;
     color: midnightblue;
     font-weight: bold;
+}
+
+p {
+    font-size: 120%
 }
 
 {
