--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=6b80e5d4cc5750c2dafd065b95e028dd)
- * Config saved to config.json and https://gist.github.com/6b80e5d4cc5750c2dafd065b95e028dd
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=f33c8cfb0c4218dc371e140460abdd3e)
+ * Config saved to config.json and https://gist.github.com/f33c8cfb0c4218dc371e140460abdd3e
  */
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
@@ -1091,7 +1091,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.42857143;
-  color: #ba1e1a;
+  color: #070233;
   background-color: #e4c1a0;
 }
 input,
@@ -1570,7 +1570,7 @@ pre {
   line-height: 1.42857143;
   word-break: break-all;
   word-wrap: break-word;
-  color: #ba1e1a;
+  color: #070233;
   background-color: #f5f5f5;
   border: 1px solid #cccccc;
   border-radius: 4px;
@@ -2507,7 +2507,7 @@ legend {
   margin-bottom: 22px;
   font-size: 24px;
   line-height: inherit;
-  color: #ba1e1a;
+  color: #070233;
   border: 0;
   border-bottom: 1px solid #e5e5e5;
 }
@@ -2916,7 +2916,7 @@ select[multiple].input-lg {
   display: block;
   margin-top: 5px;
   margin-bottom: 10px;
-  color: #ea6d69;
+  color: #1807ae;
 }
 @media (min-width: 768px) {
   .form-inline .form-group {
@@ -3561,13 +3561,13 @@ tbody.collapse.in {
   clear: both;
   font-weight: normal;
   line-height: 1.42857143;
-  color: #ba1e1a;
+  color: #070233;
   white-space: nowrap;
 }
 .dropdown-menu > li > a:hover,
 .dropdown-menu > li > a:focus {
   text-decoration: none;
-  color: #a41a17;
+  color: #04011a;
   background-color: #f5f5f5;
 }
 .dropdown-menu > .active > a,
@@ -5028,7 +5028,7 @@ a.thumbnail.active {
 }
 .thumbnail .caption {
   padding: 9px;
-  color: #ba1e1a;
+  color: #070233;
 }
 .alert {
   padding: 15px;
@@ -5692,7 +5692,7 @@ button.list-group-item-danger.active:focus {
   border-color: #dddddd;
 }
 .panel-default > .panel-heading {
-  color: #ba1e1a;
+  color: #070233;
   background-color: #f5f5f5;
   border-color: #dddddd;
 }
@@ -5701,7 +5701,7 @@ button.list-group-item-danger.active:focus {
 }
 .panel-default > .panel-heading .badge {
   color: #f5f5f5;
-  background-color: #ba1e1a;
+  background-color: #070233;
 }
 .panel-default > .panel-footer + .panel-collapse > .panel-body {
   border-bottom-color: #dddddd;
